# Autocompleter-Assistant-incomplete-

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  config.json  main.py  metrics.json  mypy.ini  profile_suggest.py  pyproject.toml  python-ci.yml  requirements.txt  tests.yml
.github/workflows/: ci.yml
analytics/: analytics.py  evaluation.py  fusion_eval.py  metrics.json  metrics_tracker.py
config/: config.json
data/: demo_corpus.txt
evaluation/: eval_fusion.py  fusion_eval.py
intelligent_autocompleter/: autocompleter.py  bktree.py  cli.py  config_manager.py  context_personal.py  context_predictor.py  hybrid_predictor.py  logger_utils.py  logging_system.py  markov_predictor.py  model_store.py  threaded_runner.py  trie.py  tui_app.py
intelligent_autocompleter/cli/: __init__.py  cli.py
intelligent_autocompleter/context/: __init__.py  context_manager.py  context_personal.py  context_predictor.py  normalizer.py  pipeline.py  scorers.py  tokenizer.py
intelligent_autocompleter/core/: __init__.py  adaptive_learner.py  autocompleter.py  bench_profiling.py  bktree.py  context_manager.py  embeddings.py  feature_preprocessor.py  feedback_tracker.py  fusion_ranker.py  hybrid_predictor.py  markov_predictor.py  protocols.py  reasoner.py  registry.py  reinforcement_learner.py  semantic_engine.py  trie.py
intelligent_autocompleter/core/reasoner/: reasoner.py
intelligent_autocompleter/plugins/: __init__.py  base.py  base_plugin.py  code_assist_plugin.py  emoji_plugin.py  plugin_loader.py  plugin_registry.py  registry.py
intelligent_autocompleter/profiling/: profile.py
intelligent_autocompleter/tools/: profile_suggest.py
intelligent_autocompleter/tui/: tui_app.py  tui_style.css
intelligent_autocompleter/tui/plugins/example_plugins/: example_plugin.py
intelligent_autocompleter/utils/: cache_utils.py  config_manager.py  logger_utils.py  logging_config.yaml  metrics_tracker.py  model_store.py  profile_suggest.py  reasoner.py  registry.py  threaded_runner.py
tests/: basic_test.py  fusion_ranker_test.py  test_adaptive_learner.py  test_cli.py  test_evaluation.py  test_fusion.py  test_fusion_basic.py  test_fusion_empty.py  test_fusion_personal.py  test_fusion_ranker.py  test_hybrid_predictor.py  test_hybrid_predictor_v2.py  test_hybrid_predictor_v3.py  test_hybridpred_v4.py  test_perf.py  test_plugins.py
tools/: profile_suggest.py
userdata/: default.json
