[project]
name = "autocompleter-assistant"
version = "0.1.0"
description = "An intelligent autocomplete assistant combining semantic and statistical NLP models."
authors = [{ name = "Bonnie McConnell" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "numpy",
    "gensim",
    "spacy",
    "joblib",
    "rich"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

# new addition below, tune mypy strictness later, has safe deaults so CI passes intially
# check below against above code, overlaps/redundancies

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90", "B", "SIM"]
ignore = ["E203", "W503"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
python_version = 3.10
ignore_missing_imports = true
strict = false
warn_unused_ignores = true

