[tool.poetry]
name = "intelligent-autocompleter"
version = "0.1.0"
description = "Intelligent autocompleter combining semantic and statistical models."
authors = ["Bonnie McConnell"]
readme = "README.md"
license = "MIT"
packages = [
  { include = "intelligent_autocompleter" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.26"
gensim = "^4.3"
spacy = "^3.8"
joblib = "^1.3"
rich = "^13.5"

# Optional extras: don't install by default, but useful
# Example: embeddings or GPU libs if you later add them
# [tool.poetry.extras]
# transformers = ["transformers"]

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-mock = "^3.11"
mypy = "^1.5"
ruff = "^0.12"
black = "^24.3"
isort = "^5.12"
pre-commit = "^4.5"
coverage = "^7.3"
tox = "^4.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Tool configs (some duplicated for convenience)
[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90", "B", "SIM"]
ignore = ["E203", "W503"]
extend-select = ["I"]  # import ordering checks from ruff

[tool.isort]
profile = "black"
line_length = 88

# Future optional addition: a single place to run mypy config, use a separate mypy.ini below for clarity.
