[tool.poetry]
name = "intelligent-autocompleter"
version = "0.1.0"
description = "Intelligent autocompleter combining semantic and statistical models."
authors = ["Bonnie McConnell"]
readme = "README.md"
license = "MIT"
packages = [
  { include = "intelligent_autocompleter" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.26"
gensim = "^4.3"
spacy = "^3.8"
joblib = "^1.3"
rich = "^13.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-mock = "^3.11"
mypy = "^1.5"
ruff = "^0.6.9"
black = "^24.3"
isort = "^5.12"
pre-commit = "^4.5"
coverage = "^7.3"
tox = "^4.12"

# CODE QUALITY TOOLS
[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "C90", "B", "SIM", "I"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.isort]
profile = "black"
line_length = 88


# BUILD BACKEND
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
